@@ -1,0 +1,2 @@
+version=2
+https://github.com/concurrencykit/ck/releases .*/v?(\d\S+)\.tar\.gz
